2001-08-09  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (gnome_*_file, gnome_unconditional_*_file): Put
	them back, but #define it as a gnome_program_locate_file() call.

2001-08-09  Martin Baulig  <baulig@suse.de>

	After a discussion with Michael and a release meeting, we
	decided to remove the sound again. It was really a bad idea.

	* gnome-sound.[ch]: Removed.
	* gnome-sound-csl.c: Removed.
	* gnome-sound-driver.[ch]: Removed.
	* gnome-triggers.[ch]: Removed.
	* test-sound.c: Removed.

2001-08-09  Martin Baulig  <baulig@suse.de>

	* gnome-sound-driver.[ch]: New files.
	* gnome-sound.c, gnome-sound-csl.c: This is an API rewrite
	which I did in my local tree, but it's not finished yet and
	shouldn't be considered as a good API - just wanted to commit
	this before ..... (see the next ChangeLog entry).

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-sound.h (gnome_sound_sample_new_from_file):
	Added `const gchar *name' argument.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* *.[ch]: Fixed #includes, only include necessary
	header files, use <...> instead of "..." where
	appropriate.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* libgnome-init.[ch]: Renamed to gnome-init.[ch].

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-triggersP.h: Removed.

	* libgnomeP.h: Removed.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-moz-remote.c, gnome-moz-remote2.c: Removed.
	* vroot.h: Removed.

	* gnome-remote.[ch]: Removed.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-program.[ch]: Updated copyright info and use
	"This file is part of GNOME 2.0" to indicate that it's part
	of the frozed API.

	* libgnome-init.[ch]:  Updated copyright info and use
	"This file is part of GNOME 2.0" to indicate that it's part
	of the frozed API.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* gnome-sound.h (gnome_sound_sample_new_from_cache): New func.
	(gnome_sound_cache_add_sample): New func.
	(gnome_sound_cache_remove_sample): New func.
